1-cp4ba-install/db2/db2mc-standalone/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: db2mc
spec:
  to:
    kind: Service
    name: db2mc
    weight: 100
  port:
    targetPort: 8443
  tls:
    termination: passthrough 
    insecureEdgeTerminationPolicy: None 
  wildcardPolicy: None
